--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,57 +1,87 @@
-/* background image and sizing to cover entire page */
 body {
     background-size: cover;
+    background-image: url("https://th.bing.com/th/id/R.0c75cfb96ec8dec51a51836d02bc38cf?rik=ZyLx6DekRpCiqA&riu=http%3a%2f%2fwww.pixelstalk.net%2fwp-content%2fuploads%2f2016%2f07%2fWeather-Desktop-Picture.jpg&ehk=di0WfDJwu%2b77RhSlqdYV3GJWwnabD8X6lt5sN4fgIgU%3d&risl=&pid=ImgRaw&r=0");
+    background-repeat: repeat-x
+ }
+
+ /* background coloring of title */
+.jumbotron {
+    background-color: rgb(245, 106, 129);
+}
+/* coloring of baox containing current weather for specified location */
+.CurrentWeather4 {
+    background-color: rgb(205, 153, 248); 
 }
 
-.card-header {
-   background-color: rgb(245, 106, 129); 
+/* text coloring of the five day forecast */
+h6 {
+    color: white;
 }
-
-.card-body {
-    background-color: rgb(128, 144, 235);
-
-    /* background-color: rgb(69, 148, 238);  */
-}
-h1 {
-    /* margin-top: 50px; */
-    font-size: 75px;
-    height: 200px;
-    background-color: rgb(112, 170, 236);  
-	/* background-color: rgb(141, 153, 224); */
-    text-align: center;
+/* background and sizing of conatiner with the locations searched */
+.col-6 {
+    width: 20px;
+    background-color: rgb(98, 146, 250);
 }
 label {
-    margin-top: 10px;
-	font-weight: bold;
-	font-size: 20px;
-}
-.card {
-	margin: 10px;
-}   
- .colOne {
-    width: 20px;
-    background-color: rgb(231, 184, 83);
-    /* background-color: rgb(235, 197, 116); */
-}
-.colTwo {
-    background-image: url("https://th.bing.com/th/id/R.0c75cfb96ec8dec51a51836d02bc38cf?rik=ZyLx6DekRpCiqA&riu=http%3a%2f%2fwww.pixelstalk.net%2fwp-content%2fuploads%2f2016%2f07%2fWeather-Desktop-Picture.jpg&ehk=di0WfDJwu%2b77RhSlqdYV3GJWwnabD8X6lt5sN4fgIgU%3d&risl=&pid=ImgRaw&r=0");
-   
-}
-.histBtnRow {
-    background-color: white;
-    max-width: fit-content;
-    margin-top: 5px;
-	margin-bottom: 5px;
-}
-.icons {
-    height: 70px;
-	width: 70px;
-}
-.cardTodayDate {
-	font-size: 20px;
+    font-size: 30px;
 }
 
-.clearLocations {
-    text-decoration-color: black;
-    background-color: white;
+
+/* coloring and sizing of boxes containing the five day forecast */
+.f1, .f2, .f3, .f4, .f5 {
+    background-color: rgb(98, 146, 250);
+    color: White; 
+    max-width: 100%;
+    margin-right: 1%;
+} 
+
+/* sizing of the search button */
+.buttonIn {
+    width: 300px;
+    position: relative;
 }
+
+/* sizing and style of city box  */
+input {
+    margin: 0px;
+    padding: 0px;
+    width: 100%;
+    outline: none;
+    height: 30px;
+    border-radius: 5px;
+}
+ 
+ /* submit buttons sizing and coloring */
+button {
+    position: absolute;
+    top: 0;
+    border-radius: 5px;
+    right: 0px;
+    z-index: 2;
+    border: none;
+    top: 2px;
+    height: 30px;
+    cursor: pointer;
+    color: white;
+    background-color:black;
+    transform: translateX(2px);
+}
+ /* clear buttons sizing and coloring */
+ /* .clearBtn { 
+    background-color: blue;
+    border-style: none;
+    border-radius: 4px;
+    color: white;
+    width: 74px; 
+    padding: 10px;
+    font-size: 1rem;
+} */
+
+/* clear button cursor */
+.clearBtn:hover {
+    cursor: pointer;
+}
+/* .clearLocations {
+    text-decoration-color: black;
+  background-color: white;
+} */
