--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,4 @@
+/* page background image, size & stop from repeating */
 body {
     background-size: cover;
     background-image: url("https://th.bing.com/th/id/R.0c75cfb96ec8dec51a51836d02bc38cf?rik=ZyLx6DekRpCiqA&riu=http%3a%2f%2fwww.pixelstalk.net%2fwp-content%2fuploads%2f2016%2f07%2fWeather-Desktop-Picture.jpg&ehk=di0WfDJwu%2b77RhSlqdYV3GJWwnabD8X6lt5sN4fgIgU%3d&risl=&pid=ImgRaw&r=0");
@@ -5,25 +6,35 @@ body {
  }
 
  /* background coloring of title */
-.jumbotron {
+ .jumbotron {
     background-color: rgb(245, 106, 129);
 }
-/* coloring of baox containing current weather for specified location */
+
+/* coloring of box containig current weather for specified location */
 .CurrentWeather4 {
-    background-color: rgb(205, 153, 248); 
+    background-image: url("https://th.bing.com/th/id/R.3103692485b1ee5e9c053f43f94f1370?rik=52ytGFW76tbGjw&pid=ImgRaw&r=0");
 }
 
 /* text coloring of the five day forecast */
 h6 {
     color: white;
 }
+
 /* background and sizing of conatiner with the locations searched */
 .col-6 {
     width: 20px;
     background-color: rgb(98, 146, 250);
 }
-label {
-    font-size: 30px;
+
+/* font size for Search City */
+ label {
+    font-size
+    : 20px;
+}
+
+/* test color of UV info. */
+.uvIndex {
+    color: black; 
 }
 
 
@@ -66,22 +77,8 @@ button {
     background-color:black;
     transform: translateX(2px);
 }
- /* clear buttons sizing and coloring */
- /* .clearBtn { 
-    background-color: blue;
-    border-style: none;
-    border-radius: 4px;
-    color: white;
-    width: 74px; 
-    padding: 10px;
-    font-size: 1rem;
-} */
 
-/* clear button cursor */
+/*clear button cursor hovering affect */
 .clearBtn:hover {
     cursor: pointer;
 }
-/* .clearLocations {
-    text-decoration-color: black;
-  background-color: white;
-} */
